fixed spacing on the chat tab

--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -317,6 +317,7 @@ body.lang_fr_CA {
       a {
         height: 26px;
         vertical-align: middle;
+        text-align: center;
         padding: 8px 0;
       }
     }
